--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "illuminate/container": "^6.4"
   },
   "autoload": {
-    "Acme\\": "src/"
+    "psr-4": {
+      "Acme\\": "src/"
+    }
   },
   "license": "MIT"
 }
